--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 					<div class="pop-up">
 						<h3>SHARE</h3>
 						<a href="#"><img src="images/icon-facebook.svg" alt="fb" /></a>
-						<a href=""><img src="images/icon-twitter.svg" alt="twitter" /></a>
-						<a href=""><img src="images/icon-pinterest.svg" alt="pin" /></a>
+						<a href="#"><img src="images/icon-twitter.svg" alt="twitter" /></a>
+						<a href="#"><img src="images/icon-pinterest.svg" alt="pin" /></a>
 					</div>
 					<!-- Share Button -->
 					<div class="share">
