--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<title>Frontend Mentor | Article preview component</title>
 	</head>
 	<body>
-		<div class="container">
-			<div id="left"></div>
-			<div id="right">
+		<main role="main" class="container">
+			<section id="left"></section>
+			<section id="right">
 				<h1 class="title">
 					Shift the overall look and feel by adding these wonderful touches to
 					furniture in your home
@@ -61,8 +61,8 @@
 						</svg>
 					</div>
 				</div>
-			</div>
-		</div>
+			</section>
+		</main>
 
 		<script src="article.js"></script>
 	</body>
